# aegir

./: .gitignore  README.md
aegir-api/: Makefile  pyproject.toml  setup.py
aegir-api/aegir/: __init__.py  config.py  db.py  zmq.py
aegir-api/aegir/api/: brewd.py  programs.py
aegir-api/aegir/cli/: __init__.py  uwsgi.py
aegir-api/lib/aegir/: __init__.py  config.py  db.py  zmq.py
aegir-api/lib/aegir/api/: __init__.py  brewd.py  programs.py
aegir-api/sql/: aegir.db  struct.sql
aegir-brewd/: .gitignore  CMakeLists.txt  Makefile  TODO
aegir-brewd/include/: CMakeLists.txt  Config.hh  Controller.hh  Exception.hh  GPIO.hh  IOHandler.hh  LogChannel.hh  MAX31856.hh  Message.hh  PRThread.hh  PRWorkerThread.hh  ProcessState.hh  SPI.hh  TSDB.hh  ThreadManager.hh  logging.hh  types.hh
aegir-brewd/rc.d/: aegir_brewd
aegir-brewd/src/: CMakeLists.txt  Config.cc  Config.hh  Controller.cc  Controller.hh  DirectSelect.cc  ElapsedTime.cc  Exception.cc  Exception.hh  GPIO.cc  GPIO.hh  IOHandler.cc  IOHandler.hh  JSONMessage.cc  JSONMessage.hh  LogChannel.cc  MAX31856.cc  MAX31856.hh  Message.cc  Message.hh  PINTracker.cc  PINTracker.hh  PRThread.cc  PRThread.hh  PRWorkerThread.cc  PRWorkerThread.hh  ProcessState.cc  ProcessState.hh  Program.cc  Program.hh  SPI.cc  TSDB.cc  ThreadManager.cc  ThreadManager.hh  ZMQ.cc  ZMQ.hh  logging.cc  main.cc  types.cc
aegir-brewd/tests/: CMakeLists.txt  Config.cc  Message.cc  tsdb.cc  types.cc
aegir-brewd/tests/data/: aegir-brewd.yaml
aegir-ui/: .angular-cli.json  .gitignore  Makefile  README-ng.md  angular.json  package-lock.json  package.json  tsconfig.json
aegir-ui/e2e/: app.e2e-spec.ts  app.po.ts
aegir-ui/src/: index.html  main.ts  polyfills.ts  styles.css  tsconfig.app.json
aegir-ui/src/app/: api.service.ts  api.types.ts  app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  app.routes.ts  enzymes.ts  int-validator.ts  program.ts
aegir-ui/src/app/add-program/: add-program.component.html  add-program.component.ts
aegir-ui/src/app/brew/: brew.component.html  brew.component.ts  brew.module.ts
aegir-ui/src/app/edit-program/: edit-program.component.html  edit-program.component.ts
aegir-ui/src/app/load-program/: load-program.component.html  load-program.component.spec.ts  load-program.component.ts
aegir-ui/src/app/maintenance/: maintenance.component.html  maintenance.component.ts  maintenance.module.ts
aegir-ui/src/app/program/: program.component.html  program.component.ts  program.module.ts
aegir-ui/src/app/programs/: add-program.component.html  add-program.component.ts  edit-program.component.html  edit-program.component.ts  load-program.component.html  load-program.component.ts  program.component.html  program.component.ts  program.ts  programs.component.html  programs.component.ts  programs.module.ts  programs.routes.ts
aegir-ui/src/app/settings/: settings.component.html  settings.component.ts  settings.module.ts
api/: .gitignore  pyproject.toml
api/aegir/: __init__.py  db.py  zmq.py
api/aegir/api/: __init__.py  brewd.py  fermd.py
api/aegir/cli/: __init__.py  uwsgi.py
api/config/: uwsgi-aegir.ini
api/sql/: aegir.db  struct.sql
controllers/: .gitignore  CMakeLists.txt
controllers/brewd/: CMakeLists.txt  Config.cc  Controller.cc  DirectSelect.cc  DirectSelect.hh  ElapsedTime.cc  ElapsedTime.hh  Environment.cc  IOHandler.cc  IOHandler.hh  JSONMessage.cc  JSONMessage.hh  PRWorkerThread.cc  Program.cc  TSDB.cc  logging.hh  main.cc  types.cc  types.hh
controllers/common/: CMakeLists.txt  ConfigBase.cc  ConfigBase.hh  Exception.cc  Message.cc  Message.hh  ServiceManager.cc  ServiceManager.hh  ThreadManager.cc  ThreadManager.hh  ZMQ.cc  ZMQ.hh  cmakeconfig.hh  cmakeconfig.hh.in  logging.cc  logging.hh  misc.cc  misc.hh  ryml.cc  ryml.hh
controllers/common/tests/: CMakeLists.txt  Message.cc  ThreadManager.cc  catch2.cc  common.cc  common.hh  zmq.cc
controllers/fermd/: .gitignore  Bluetooth.cc  Bluetooth.hh  CMakeLists.txt  DB.cc  DB.hh  DBConnection.cc  DBConnection.hh  DBResult.cc  DBResult.hh  DBSchema.cc  DBSchema.hh  DBStatement.cc  DBStatement.hh  DBTransaction.cc  DBTransaction.hh  DBTypes.cc  DBTypes.hh  FermdConfig.cc  FermdConfig.hh  MainLoop.cc  MainLoop.hh  Message.cc  Message.hh  PRThread.cc  PRThread.hh  SensorCache.cc  SensorCache.hh  SensorProxy.cc  SensorProxy.hh  ServiceManager.cc  ServiceManager.hh  TiltDB.cc  TiltDB.hh  ZMQConfig.cc  ZMQConfig.hh  generated.hh  main.cc  uuid.cc  uuid.hh
controllers/fermd/sql/: v1.sql
controllers/fermd/tests/: Bluetooth.cc  CMakeLists.txt  FermdConfig.cc  Message.cc  TiltDB.cc  db.cc  pr.cc  pr_fermenter_types.cc  pr_fermenters.cc  pr_generic.cc  pr_tilthydrometers.cc  prbase.cc  prbase.hh
controllers/include/: Config.hh  Environment.hh  MAX31856.hh  Message.hh  TSDB.hh
controllers/src/: Config.cc  Exception.cc  MAX31856.cc  PINTracker.cc
controllers/tests/: CMakeLists.txt  FermdConfig.cc  tsdb.cc
controllers/tests/data/: aegir-brewd.yaml
electronics/: .gitignore  electronics  electronics-cache.lib  electronics.pro  electronics.sch  electronics.xml  sym-lib-table  themislibrary.bck  themislibrary.dcm  themislibrary.lib
html/: Makefile  webpack.config.js
html/root/: index.html
html/src/: package.json
ui/: Makefile  README.md  angular.json  package-lock.json  package.json
ui/src/app/: api.service.ts  api.types.ts  app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.module.ts  fermd.component.html  fermd.component.ts  programs.common.ts
ui/src/app/add-program/: add-program.component.ts
ui/src/app/brew/: brew.component.spec.ts  brew.component.ts
ui/src/app/edit-program/: edit-program.component.html
ui/src/app/fermenters/: fermenters.component.html  fermenters.component.ts
ui/src/app/fermentertypes/: fermentertypes.component.html  fermentertypes.component.ts
ui/src/app/load-program/: load-program.component.ts
ui/src/app/program/: program.component.html  program.component.ts
ui/src/app/settings/: settings.component.html  settings.component.ts
(+2 files in other folders)
