[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegir-api"
dynamic = ["version"]
description = "Aegir API middleware"
license = ""
authors = [
    { name = "Gergely Czuczy", email = "gergely.czuczy@harmless.hu" },
]
keywords = [
    "HERMS",
    "RIMS",
    "beer",
]
dependencies = [
  "Flask >= 3.0.0",
  "Flask-RESTful",
  "PyYAML >= 6.0.0",
  "pyzmq >= 25.1.1",
  "python-dateutil >= 2.8.2"
]

[project.urls]
Documentation = "https://github.com/gczuczy/aegir"
Issues = "https://github.com/gczuczy/aegir"
Source = "https://github.com/gczuczy/aegir"

[project.scripts]
aegir-api = "aegir.cli:api"

[tool.hatch.version]
path = "aegir/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=aegir --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "aegir/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["aegir"]

[tool.hatch.targets.sdist]
exclude = [
  "/.github",
  ".git",
]
